--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,16 @@ script:
 - go test -race -coverprofile=coverage.txt -covermode=atomic
 after_success:
 - bash <(curl -s https://codecov.io/bash)
+branches:
+  only:
+  - master
 
 before_deploy:
-    # Set up git user name and tag this commit
-    - git config --local user.name "YOUR GIT USER NAME"
-    - git config --local user.email "YOUR GIT USER EMAIL"
-    - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
-    - git tag $TRAVIS_TAG
+  # Set up git user name and tag this commit
+  - git config --local user.name "YOUR GIT USER NAME"
+  - git config --local user.email "YOUR GIT USER EMAIL"
+  - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
+  - git tag $TRAVIS_TAG
 
 deploy:
   provider: releases
