add go isntall before deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_deploy:
 - git config --local user.email "YOUR GIT USER EMAIL"
 - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
 - git tag $TRAVIS_TAG
+- go install
 
 deploy:
   file: ${TRAVIS_HOME}/gopath/bin/travis-test
